apps/system/argocd/resources/argocd.ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  tls:
    secretName: wildcard.bert.local-tls
  routes:
  - kind: Rule
    match: Host(`argocd.bert.local`)
    priority: 10
    services:
    - name: argocd-server 
      port: 80
  - kind: Rule
    match: Host(`argocd.bert.local`) && Headers(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
